--- a/Frontend/src/styles/david2.css
+++ b/Frontend/src/styles/david2.css
@@ -1,3 +1,5 @@
+/* not currently used */
+
 .admin-form {
     display: flex;
     flex-direction: column;
@@ -54,4 +56,4 @@ main {
 /* overwrite first-chart */
 .first-chart {
   height: fit-content;
-}
+} 
