--- a/Frontend/src/views/admin/admin.html
+++ b/Frontend/src/views/admin/admin.html
@@ -55,9 +55,24 @@
                     <label for="course-id">Course ID</label>
                     <input type="text" name="course-id" id="course-id">
                     <label for="teacher-id">Teacher ID</label>
-                    <input type="text" name="teacher-id" id="teacher-id">
+                    <input type="text" name="teacher-id" id="teacher-id">                  
                     <label for="day">Day</label>
-                    <input type="text" name="day" id="day">
+                    <div>
+                        <label for="monday">Monday</label>
+                        <input type="checkbox" name="monday" id="monday">
+                        <br>
+                        <label for="tuesday">Tuesday</label>
+                        <input type="checkbox" name="tuesday" id="tuesday">
+                        <br>
+                        <label for="wednesday">Wednesday</label>
+                        <input type="checkbox" name="wednesday" id="wednesday">
+                        <br>
+                        <label for="thursday">Thursday</label>
+                        <input type="checkbox" name="thursday" id="thursday">
+                        <br>
+                        <label for="friday">Friday</label>
+                        <input type="checkbox" name="friday" id="friday">
+                    </div>
                     <label for="start-time">Start Time</label>
                     <input type="time" name="start-time" id="start-time">
                     <label for="end-time">End Time</label>
