course material table
A table is made where the data from the form is to keep track of the course material

--- a/Frontend/src/views/teacher/teacher.html
+++ b/Frontend/src/views/teacher/teacher.html
@@ -35,11 +35,11 @@
                 |
                 <a href="#chart-2" class="feature"> Registration Manage Course</a>
                 |
-                <a href="#chart-3" class="feature">Calendar</a>
+                <a href="#chart-3" class="feature">See course material</a>
                 |
                 <a href="#chart-4" class="feature">Schedule</a> 
                 |
-                <a href="#chart-5" class="feature">See Course Material</a> 
+                <a href="#chart-5" class="feature">Calendar</a> 
             </b></p>
         </section>
     </nav>
@@ -71,20 +71,39 @@
                     <input type="text" name="material-description" id="material-description" required>
                     
                     <button type="submit" class="admin-button">Submit</button>
-                    <button type="button" class="admin-button">Consult</button>
-                    <button type="button" class="admin-button">Delete</button>
                 </form>
             </div>
         </section>
         
         <section class="chart" id="chart-3">
-            <h3>Calendar</h3>
+            <h3>See course material</h3>
+           
             <div class="div-chart">
+                <table id="course-material-table" border="1">
+                    <thead>
+                        <tr>
+                            <th>Course ID</th>
+                            <th>Course Material ID</th>
+                            <th>Material Title</th>
+                            <th>Material Description</th>
+                            <th>Modify</th>
+                            <th>Delete</th>
+                        </tr>
+                    </thead>
+                    <tbody>
 
+                    </tbody>
+                </table>
             </div>
         </section>
         <section class="chart" id="chart-4">
             <h3>Schedule</h3>
+            <div class="div-chart">
+
+            </div>
+        </section>
+        <section class="chart" id="chart-5">
+            <h3>Calendar</h3>
             <div class="div-chart">
 
             </div>
