--- a/Frontend/src/styles/formsmanagecourse.css
+++ b/Frontend/src/styles/formsmanagecourse.css
@@ -40,4 +40,14 @@
     background-color: #002244;
 }
 
+#course-material-table {
+    width: 100%; 
+    border-collapse: collapse;
+}
+
+#course-material-table th {
+    background-color: #003366FF; 
+    color: white; 
+    padding: 10px; 
+}
 
