table attendance regisration

--- a/Frontend/src/views/teacher/teacher.html
+++ b/Frontend/src/views/teacher/teacher.html
@@ -52,8 +52,23 @@
         <section class="chart" id="chart-1">
             <h3>Attendance Registration</h3>
             <div class="div-chart">
+                <table border="1" class="student-table">
+                    <thead>
+                        <tr>
+                            <th>Full Name</th>
+                            <th>Username</th>
+                            <th>Email Address</th>
+                            <th>Birthdate</th>
+                            <th>Role</th>
+                            <th>Delete</th>
+                            <th>Modify</th>
+                        </tr>
+                    </thead>
+
+                </table>
             </div>
         </section>
+        
         <section class="chart" id="chart-2">
             <h3>Registration Manage Course</h3>
             <div class="div-chart4">
