style for table students
This is added to display the table where the students are

--- a/Frontend/src/styles/formsmanagecourse.css
+++ b/Frontend/src/styles/formsmanagecourse.css
@@ -51,3 +51,23 @@
     padding: 10px; 
 }
 
+.student-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 1rem;
+    text-align: center;
+}
+
+.student-table th, 
+.student-table td {
+    padding: 12px;
+    border: 1px solid #040101;
+}
+
+.student-table th {
+    background-color: #003366FF;
+    color: #ddd;
+}
+
+
