--- a/Frontend/src/views/teacher/teacher.html
+++ b/Frontend/src/views/teacher/teacher.html
@@ -60,8 +60,8 @@
                             <th>Email Address</th>
                             <th>Birthdate</th>
                             <th>Role</th>
-                            <th>Delete</th>
-                            <th>Modify</th>
+                            <th>Date</th>
+                            <th>Attendance</th>
                         </tr>
                     </thead>
 
