--- a/Frontend/src/styles/formsmanagecourse.css
+++ b/Frontend/src/styles/formsmanagecourse.css
@@ -125,7 +125,7 @@
 }
 
 .pending {
-    background-color: #ffeb3b; /* Yellow background for pending tasks */
+    background-color: #ffeb3b;
     margin: 2px 0;
     padding: 5px;
     border-radius: 3px;
