--- a/Frontend/src/views/admin/admin.html
+++ b/Frontend/src/views/admin/admin.html
@@ -56,7 +56,7 @@
                     <input type="text" name="course-id" id="course-id">
                     <label for="teacher-id">Teacher ID</label>
                     <input type="text" name="teacher-id" id="teacher-id">                  
-                    <label for="day">Day</label>
+                    <label for="day">Day:</label>
                     <div>
                         <label for="monday">Monday</label>
                         <input type="checkbox" name="monday" id="monday">
@@ -73,6 +73,7 @@
                         <label for="friday">Friday</label>
                         <input type="checkbox" name="friday" id="friday">
                     </div>
+                    <br>
                     <label for="start-time">Start Time</label>
                     <input type="time" name="start-time" id="start-time">
                     <label for="end-time">End Time</label>
