--- a/Frontend/src/views/login2.html
+++ b/Frontend/src/views/login2.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/Frontend/src/styles/Home.css" />
-
 </head>
 <body>
     <div class="container">
@@ -40,7 +39,7 @@
 
                 <!-- Forgot password -->
                 <div class="forgot-password">
-                    <a href="#">Forgot password?</a>
+                    <a href="/Frontend/src/views/password.html">Forgot password?</a>
                 </div>
             </form>
         </div>
