--- a/Frontend/src/app/pages/student/student.component.html
+++ b/Frontend/src/app/pages/student/student.component.html
@@ -1,1 +1,201 @@
-<p>student works!</p>
+<body class="grid-container">
+    <header class="header">
+        <a href="../../views/home/home.html">
+            <img src="../../img/Logo.png" alt="" class="logo">
+        </a>
+        <div class="flex-container">
+            <button class="button">Student</button>
+            <img src="../../img/iconperson.png" alt="" class="icon-person">
+        </div>
+    </header>
+
+    <aside class="aside">
+        <p class="title">Welcome Student</p>
+        <img src="../../img/student.png" alt="" class="img-aside">
+    </aside>
+
+    <nav class="nav">
+        <section class="list">
+            <p><b>
+                <a href="#chart-0" class="feature">Start</a>
+                |
+                <a href="#chart-1" class="feature">Class Material</a>
+                |
+                <a href="#chart-2" class="feature">Qualifications</a>
+                |
+                <a href="#chart-3" class="feature">Schedule</a>
+                |
+                <a href="#chart-4" class="feature">Enrollment</a> 
+            </b></p>
+        </section>
+    </nav>
+
+    <main class="main">
+        <section class="first-chart" id="chart-0">
+            <i class='bx bxs-hand-up'></i>
+            <h3>What do you want to do?</h3>
+        </section>
+        <section class="chart" id="chart-1">
+            <h3>Class Material</h3>
+            <div class="div-chart">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Material ID</th>
+                            <th>Title</th>
+                            <th>Description</th>
+                            <th>Course ID</th>
+                            <th>Course Name</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Introduction to Programming</td>
+                            <td><a href="resource1.pdf">Lecture Notes</a></td>
+                            <td>10</td>
+                            <td>Math</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Variables and Data Types</td>
+                            <td><a href="resource2.pdf">Lecture Notes</a></td>
+                            <td>20</td>
+                            <td>Science</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Control Structures</td>
+                            <td><a href="resource3.pdf">Lecture Notes</a></td>
+                            <td>30</td>
+                            <td>Physics</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <section class="chart" id="chart-2">
+            <h3>Qualifications</h3>
+            <div class="div-chart">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Course ID</th>
+                            <th>Course Name</th>
+                            <th>Assignment</th>
+                            <th>Grade</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>10</td>
+                            <td>Programming 101</td>
+                            <td>Assignment 1</td>
+                            <td>5.0</td>
+                        </tr>
+                        <tr>
+                            <td>20</td>
+                            <td>Programming 101</td>
+                            <td>Assignment 2</td>
+                            <td>4.0</td>
+                        </tr>
+                        <tr>
+                            <td>30</td>
+                            <td>Programming 101</td>
+                            <td>Midterm Exam</td>
+                            <td>3.0</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <section class="chart" id="chart-3">
+            <h3>Schedule</h3>
+            <div class="div-chart">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Day</th>
+                            <th>Start Time</th>
+                            <th>End Time</th>
+                            <th>Course ID</th>
+                            <th>Course Name</th>
+                            <th>Room</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Monday</td>
+                            <td>09:00</td>
+                            <td>10:30</td>
+                            <td>10</td>
+                            <td>Programming 101</td>
+                            <td>Room 101</td>
+                        </tr>
+                        <tr>
+                            <td>Wednesday</td>
+                            <td>11:00</td>
+                            <td>12:30</td>
+                            <td>20</td>
+                            <td>Data Structures</td>
+                            <td>Room 202</td>
+                        </tr>
+                        <tr>
+                            <td>Friday</td>
+                            <td>14:00</td>
+                            <td>15:30</td>
+                            <td>30</td>
+                            <td>Algorithms</td>
+                            <td>Room 303</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <section class="chart" id="chart-4">
+            <h3>Enrollment</h3>
+            <div class="div-chart">
+                <form action="" class="manage-form">
+                    <label for="course-id">Course ID</label>
+                    <input type="number" name="course-id" id="course-id" required>
+                    
+                    <label for="teacher-id">Teacher ID</label>
+                    <input type="number" name="teacher-id" id="teacher-id" required>
+                    
+                    <button onclick="alert('The registration has been created successfully')" type="submit" class="student-button">Submit</button>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div>
+            <h3>Contact Us</h3>
+            <p>43, Av. Carabobo #42, Medellin, Antioquia</p>
+            <p>(604) 444 76 54</p>
+            <p>Whatsapp: (57) 3008848512</p>
+        </div>
+        <div class="about">
+            <h3>About Us</h3>
+            <a href="../../views/home/home.html">Home</a>
+            <a href="../../views/home/home.html#mission">Mission</a>
+            <a href="../../views/home/home.html#vision">Vision</a>
+        </div>
+        <div class="social">
+            <h3>Our Social Networks</h3>
+            <div class="icons">
+                <a href="https://www.facebook.com/politecnicojic">
+                    <i class='bx bxl-facebook'></i>
+                </a>
+                <a href="https://www.youtube.com/@politecnicojic1964">
+                    <i class='bx bxl-youtube' ></i>
+                </a>
+                <a href="https://www.instagram.com/politecnicojic/">
+                    <i class='bx bxl-instagram-alt' ></i>
+                </a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="../../js/main.js"></script>
+</body>
