--- a/Frontend/src/app/pages/teacher/teacher.component.html
+++ b/Frontend/src/app/pages/teacher/teacher.component.html
@@ -1,1 +1,115 @@
-<p>teacher works!</p>
+<body class="grid-container">
+    <header class="header">
+        <a href="../views/home/home.html">
+            <img src="../../img/Logo.png"alt="" class="logo">
+        </a>
+        <div class="flex-container">
+            <button class="button">User</button>
+            <img src="../../img/iconperson.png" alt="" class="icon-person">
+        </div>
+    </header>
+
+    <aside class="aside">
+        <p class="title">Welcome Teacher</p>
+        <img src="../../img/teachers.png" alt="" class="img-aside">
+    </aside>
+
+    <nav class="nav">
+        <section class="list">
+            <p><b>
+                <a href="#chart-0" class="feature">Start</a>
+                |
+                <a href="#chart-1" class="feature">Attendance Registration</a>
+                |
+                <a href="#chart-2" class="feature"> Registration Manage Course</a>
+                |
+                <a href="#chart-3" class="feature">Calendar</a>
+                |
+                <a href="#chart-4" class="feature">Schedule</a> 
+                |
+                <a href="#chart-5" class="feature">See Course Material</a> 
+            </b></p>
+        </section>
+    </nav>
+
+    <main class="main">
+        <section class="first-chart" id="chart-0">
+            <i class='bx bxs-hand-up'></i>
+            <h3>What do you want to do?</h3>
+        </section>
+        <section class="chart" id="chart-1">
+            <h3>Attendance Registration</h3>
+            <div class="div-chart">
+            </div>
+        </section>
+        <section class="chart" id="chart-2">
+            <h3>Class Material</h3>
+            <div class="div-chart4">
+                <form action="" class="managecourse-form">
+                    <label for="subject-id">Course ID</label>
+                    <input type="text" name="subject-id" id="subject-id" required>
+                    
+                    <label for="course-material-id">Course Material ID</label>
+                    <input type="text" name="course-material-id" id="course-material-id" required>
+                    
+                    <label for="material-title">Material Title</label>
+                    <input type="text" name="material-title" id="material-title" required>
+                    
+                    <label for="material-description">Material Description</label>
+                    <input type="text" name="material-description" id="material-description" required>
+                    
+                    <button type="submit" class="admin-button">Submit</button>
+                    <button type="button" class="admin-button">Consult</button>
+                    <button type="button" class="admin-button">Delete</button>
+                </form>
+            </div>
+        </section>
+        
+        <section class="chart" id="chart-3">
+            <h3>Calendar</h3>
+            <div class="div-chart">
+
+            </div>
+        </section>
+        <section class="chart" id="chart-4">
+            <h3>Schedule</h3>
+            <div class="div-chart">
+
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div>
+            <h3>Contact Us</h3>
+            <p>43, Av. Carabobo #42, Medellin, Antioquia</p>
+            <p>(604) 444 76 54</p>
+            <p>Whatsapp: (57) 3008848512</p>
+        </div>
+        <div class="about">
+            <h3>About Us</h3>
+            <a href="../../views/home/home.html">Home</a>
+            <a href="../../views/home/home.html#mission">Mission</a>
+            <a href="../../views/home/home.html#vision">Vision</a>
+        </div>
+        <div class="social">
+            <h3>Our Social Networks</h3>
+            <div class="icons">
+                <a href="https://www.facebook.com/politecnicojic" target="_blank">
+                    <i class='bx bxl-facebook'></i>
+                </a>
+                
+                <a href="https://www.youtube.com/@politecnicojic1964" target="_blank">
+                    <i class='bx bxl-youtube'></i>
+                </a>
+                
+                <a href="https://www.instagram.com/politecnicojic/" target="_blank">
+                    <i class='bx bxl-instagram-alt'></i>
+                </a>
+                
+            </div>
+        </div>
+    </footer>
+
+    <script src="../../js/main.js"></script>
+</body>
