--- a/Frontend/src/app/pages/admin/admin.component.html
+++ b/Frontend/src/app/pages/admin/admin.component.html
@@ -1,10 +1,10 @@
 <body class="grid-container">
     <header class="header">
-        <a href="../views/home/home.html">
-            <img src="../../img/Logo.png" alt="" class="logo">
+        <a href="/" (click)="reload()">
+            <img src="../../img/Logo.png" alt="" class="logo" >
         </a>
         <div class="flex-container">
-            <button class="button">Admin</button>
+            <button class="button"(click)="logOut()">log out</button>
             <img src="../../img/iconperson.png" alt="" class="icon-person">
         </div>
     </header>
