--- a/Frontend/src/app/pages/home/home.component.html
+++ b/Frontend/src/app/pages/home/home.component.html
@@ -5,8 +5,8 @@
             <img src="../../img/Logo.png" alt="" class="logo">
         </a>
         <div class="flex-container">
-
-            <button class="button" [routerLink]="['/login']">Login</button>
+            @if (rol!=="") {<button class="button" [routerLink]="['/',rol]">{{ rol }}</button>}
+            @else {<button class="button" [routerLink]="['/login']">Login</button>}
             <img src="../../img/iconperson.png" alt="" class="icon-person">
         </div>
     </header>
