--- a/Frontend/src/app/pages/student/student.component.html
+++ b/Frontend/src/app/pages/student/student.component.html
@@ -4,7 +4,7 @@
             <img src="../../img/Logo.png" alt="" class="logo">
         </a>
         <div class="flex-container">
-            <button class="button">Student</button>
+            <button class="button"(click)="logOut()">log out</button>
             <img src="../../img/iconperson.png" alt="" class="icon-person">
         </div>
     </header>
