--- a/Frontend/src/app/pages/student/student.component.html
+++ b/Frontend/src/app/pages/student/student.component.html
@@ -1,6 +1,6 @@
 <body class="grid-container">
     <header class="header">
-        <a href="../../views/home/home.html">
+        <a  href="/" (click)="reload()">
             <img src="../../img/Logo.png" alt="" class="logo">
         </a>
         <div class="flex-container">
