--- a/Frontend/src/app/pages/home/home.component.html
+++ b/Frontend/src/app/pages/home/home.component.html
@@ -1,7 +1,6 @@
-
 <body class="grid-container">
     <header class="header">
-        <a href="../../views/home/home.html">
+        <a href="/" (click)="reload()">
             <img src="../../img/Logo.png" alt="" class="logo">
         </a>
         <div class="flex-container">
@@ -23,14 +22,14 @@
     <nav class="nav">
         <section class="list">
             <p><b>
-                <a href="../home/home.html" class="feature">Home</a>
-                |
-                <a href="#about-us" class="feature">About Us</a>
-                |
-                <a href="#mission" class="feature">Mission</a>
-                |
-                <a href="#vision" class="feature">Vision</a>
-            </b></p>
+                    <a href="../home/home.html" class="feature">Home</a>
+                    |
+                    <a href="#about-us" class="feature">About Us</a>
+                    |
+                    <a href="#mission" class="feature">Mission</a>
+                    |
+                    <a href="#vision" class="feature">Vision</a>
+                </b></p>
         </section>
     </nav>
 
@@ -43,13 +42,17 @@
             <div class="rectangle" id="about-us">
                 <h4>About Us</h4>
                 <p>
-                    Welcome to World university, a place where tradition meets innovation. Established in 2020, we have been committed to providing a high-quality education that empowers students to become leaders in their fields. Our vibrant community fosters intellectual curiosity, creativity, and critical thinking, preparing our graduates for success in an ever-changing world.
+                    Welcome to World university, a place where tradition meets innovation. Established in 2020, we have
+                    been committed to providing a high-quality education that empowers students to become leaders in
+                    their fields. Our vibrant community fosters intellectual curiosity, creativity, and critical
+                    thinking, preparing our graduates for success in an ever-changing world.
                 </p>
             </div>
             <div class="rectangle" id="mission">
                 <h4>Mission</h4>
                 <p>
-                    To inspire and educate students to achieve their full potential, fostering personal and academic growth in a supportive environment.
+                    To inspire and educate students to achieve their full potential, fostering personal and academic
+                    growth in a supportive environment.
                 </p>
             </div>
             <div class="rectangle" id="vision">
@@ -81,10 +84,10 @@
                     <i class='bx bxl-facebook'></i>
                 </a>
                 <a href="https://www.youtube.com/">
-                    <i class='bx bxl-youtube' ></i>
+                    <i class='bx bxl-youtube'></i>
                 </a>
                 <a href="https://www.instagram.com/">
-                    <i class='bx bxl-instagram-alt' ></i>
+                    <i class='bx bxl-instagram-alt'></i>
                 </a>
             </div>
         </div>
